Configure active LinkedIn, Indeed, and Naukri job providers with direct apply links and database integration